Resetting icon line-height back to 1 from 0. It caused some alignment issues.

--- a/src/sass/bootstrap/_icons.scss
+++ b/src/sass/bootstrap/_icons.scss
@@ -36,7 +36,7 @@ html:hover [class^="lt-"] {
 	display: inline-block;
 	bottom: 1px;
 	position: relative;
-	line-height: 0;
+	line-height: 1;
   vertical-align: middle;
 	-moz-font-feature-settings: "liga=1";
 	-moz-font-feature-settings: "liga";
